<resources>
    <string name="app_name">EuriskoCodeChallenge</string>
    <string name="menu_more">More</string>
    <string name="menu_news">News</string>
    <string name="login">Login</string>
    <string name="password_hint">Password</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="confirmPassword_hint">Confirm Password</string>
    <string name="email_hint">E-mail</string>
    <string name="text_signup">Sign-Up</string>
    <string name="text_signup_link"><u>Sign-Up</u></string>
    <string name="confirm_password_et">Confirm Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save">Save</string>
    <string name="hint_old_password">Enter Old Password</string>
    <string name="hint_new_password">Enter New Password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="alert_message">Are you sure you want to exit?</string>
    <string name="alert_exit">Exit</string>
    <string name="alert_cancel">Cancel</string>
    <string name="requires_internet">This Feature Requires an Internet Connection</string>
    <string name="full_article">Find the full article at:</string>
    <string name="last_updated">Last Updated:</string>
    <string name="article_image">Article Image</string>
    <string name="camera_label">Camera</string>
    <string name="storage_label">Storage</string>
    <string name="error_tag">ERROR</string>
    <string name="permission_error">Permission not granted</string>
</resources>