<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.more.MoreFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_account_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2"
        app:shapeAppearanceOverlay="@style/Circular" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btn_edit_profile"
        app:icon="@drawable/ic_edit"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="@+id/user_image"
        app:layout_constraintStart_toStartOf="@+id/user_image"
        app:layout_constraintTop_toBottomOf="@+id/user_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_change_password"
        app:icon="@drawable/ic_edit"
        app:iconGravity="end"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/btn_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_about_us"
        app:icon="@drawable/ic_info"
        app:iconGravity="end"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_change_password"
        app:layout_constraintStart_toStartOf="@+id/btn_change_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/btn_about"
        app:layout_constraintStart_toStartOf="@+id/btn_about"
        app:layout_constraintTop_toBottomOf="@+id/btn_about" />


</androidx.constraintlayout.widget.ConstraintLayout>