<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin"
        android:layout_marginTop="@dimen/tv_margin"
        android:text="@string/login"
        android:textAlignment="textStart"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/linearlayout_padding">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:boxStrokeWidthFocused="@dimen/input_text_stroke_size"
            app:endIconMode="clear_text"
            app:endIconTint="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:boxStrokeWidthFocused="@dimen/input_text_stroke_size"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_arrow_right"
            app:iconGravity="end"
            android:layout_marginTop="@dimen/material_button_margin"
            android:text="@string/login"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/hyper_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_signup_link"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>