<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".ui.home.news.NewsDetailsFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:text="Title" />

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="wrap_content"
        android:contentDescription="@string/article_image" />

    <TextView
        android:id="@+id/abstract_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="Abstract" />

    <TextView
        android:id="@+id/author_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        tools:text="Author"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_updated" />

        <TextView
            android:id="@+id/updated_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="19-9-9"
            android:textColor="@android:color/holo_blue_light"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_article" />

        <TextView
            android:id="@+id/url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="URL"
            android:textColor="@android:color/holo_blue_light"/>
    </LinearLayout>


</LinearLayout>