<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.more.ChangePasswordFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fName_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:hint="@string/hint_old_password"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:inputType="textCapWords"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lName_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:hint="@string/hint_new_password"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/fName_text_layout"
        app:layout_constraintStart_toStartOf="@+id/fName_text_layout"
        app:layout_constraintTop_toBottomOf="@+id/fName_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:inputType="textCapWords"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="@+id/lName_text_layout"
        app:layout_constraintStart_toStartOf="@+id/lName_text_layout"
        app:layout_constraintTop_toBottomOf="@+id/lName_text_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>